# datastone-challenge-frontend

./: .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
challenge/: settings.py  urls.py
polls/: admin.py  models.py  serializers.py  urls.py  views.py
polls/migrations/: 0001_initial.py
